<resources>

    <string name="app_name">商飞学习管理系统</string>
    <string name="url_host">http://192.168.108.143/shang/api/LMSApi.php</string>
    <string name="url_api">api/LMSApi.php</string>

    <string-array name="options_array">
        <item>我的信息</item>
        <item>课程列表</item>
        <item>联系我们</item>
        <item>关于</item>
    </string-array>
    
    <string name="course_back_main">返回主菜单</string>

    <array name="fileEndingImage">
        <item>.png</item>
        <item>.gif</item>
        <item>.jpg</item>
        <item>.jpeg</item>
        <item>.bmp</item>
    </array>
    <array name="fileEndingAudio">
        <item>.mp3</item>
        <item>.wav</item>
        <item>.ogg</item>
        <item>.midi</item>
    </array>
    <array name="fileEndingVideo">
        <item>.mp4</item>
        <item>.rmvb</item>
        <item>.avi</item>
        <item>.flv</item>
    </array>
    <array name="fileEndingPackage">
        <item>.jar</item>
        <item>.zip</item>
        <item>.rar</item>
        <item>.gz</item>
        <item>.apk</item>
        <item>.img</item>
    </array>
    <array name="fileEndingWebText">
        <item>.htm</item>
        <item>.html</item>
        <item>.php</item>
        <item>.jsp</item>
    </array>
    <array name="fileEndingText">
        <item>.txt</item>
        <item>.java</item>
        <item>.c</item>
        <item>.cpp</item>
        <item>.py</item>
        <item>.xml</item>
        <item>.json</item>
        <item>.log</item>
    </array>
    <array name="fileEndingWord">
        <item>.doc</item>
        <item>.docx</item>
    </array>
    <array name="fileEndingExcel">
        <item>.xls</item>
        <item>.xlsx</item>
    </array>
    <array name="fileEndingPPT">
        <item>.ppt</item>
        <item>.pptx</item>
    </array>
    <array name="fileEndingPdf">
        <item>.pdf</item>
    </array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="aboutuser">您还未登录！</string>
    <string name="aboutapp">商飞学习管理系统\nv0.4</string>
    <string name="data_empty">网络连接错误！\n请检查网络连接</string>
    <string name="item_icon">ICON</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_label_username">帐号</string>  
    <string name="login_label_password">密码</string>  
    <string name="login_label_url">API接口地址</string>
    <string name="login_label_signin">登 录</string>  
    <string name="login_status_logging_in">登录中</string>  
    <string name="login_username_hint">请输入您的用户名</string>  
    <string name="login_password_hint">请输入8&#8211;18位密码</string>
    <string name="login_hosturl_hint">请输入连接API地址</string>
    <string name="login_register_link">没有帐号？ <a href="http://www.baidu.com.cn">注册</a></string>
    <string name="version_name">Version:</string>
    <string name="quit_login">退出登录</string>
    <string name="close_web_view">Close</string>
    <string name="contact_us">联系方式\n邮箱：mtrzwdsd@163.com</string>
    
</resources>